<?xml version="1.0"?>
<package>
  <name>qpOASES</name>
  <version>3.2.2</version>
  <description>The qpOASES package for ROS</description>

  <maintainer email="guillaume.de-mathelin-de-papigny@inria.fr">Guillaume de Mathelin</maintainer>
  <author email="guillaume.de-mathelin-de-papigny@inria.fr">Guillaume de Mathelin</author>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>